# azork

./: .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.sh  package-lock.json  package.json
.claude/runtime/: launcher_context.json  sessions.jsonl
.claude/runtime/locks/: .workflow_active
.github/hooks/: _error_handler  amplihack-hooks.json  post-tool-use  pre-compact  pre-tool-use  session-start  stop  user-prompt-submit
.github/workflows/: ci.yml  release.yml
agentic-bridge/: Cargo.toml  README.md
agentic-bridge/src/: lib.rs
assets/azure-icons/: LICENSE-NOTICE.md
azext/: .gitignore  README.md  build.sh  setup.py
azext/azext_azork/: __init__.py  _help.py  _params.py  azext_metadata.json  commands.py  custom.py
azext/tests/: conftest.py  test_custom.py
docs/: API.md  AUTODISCOVERY.md  CARL-OIT-CAMPAIGN.md  CONFIGURATION.md  DEVELOPMENT.md  DUNGEON-CRAWLER.md  INSTALL.md  SECURITY-AUDIT.md  TUTORIAL.md  UPDATING.md  USAGE.md  oit-friction-report.md
docs/atlas/: atlas-manifest.json  index.md  staleness-map.yaml
docs/atlas/api-contracts/: README.md  api-contracts.dot  api-contracts.mmd
docs/atlas/ast-lsp-bindings/: README.md  ast-lsp-bindings.dot  ast-lsp-bindings.mmd
docs/atlas/compile-deps/: README.md  compile-deps.dot  compile-deps.mmd
docs/atlas/cypher/: atlas-bugs.cypher  atlas-layers.cypher  atlas-relationships.cypher  atlas-services.cypher  queries.cypher  schema.cypher
docs/atlas/data-flow/: README.md  data-flow.dot  data-flow.mmd
docs/atlas/repo-surface/: README.md  repo-surface.dot  repo-surface.mmd
docs/atlas/runtime-topology/: README.md  runtime-topology.dot  runtime-topology.mmd
docs/atlas/service-components/: README.md  service-components-agent-agent_engine.dot  service-components-agent-agent_engine.mmd  service-components-backend.dot  service-components-backend.mmd  service-components-capabilities.dot  service-components-capabilities.mmd  service-components-dungeon.dot  service-components-dungeon.mmd  service-components-memory.dot  service-components-memory.mmd  service-components-oit.dot  service-components-oit.mmd  service-components-update.dot  service-components-update.mmd
docs/atlas/user-journeys/: README.md  user-journeys-1-crawl-mock-large.dot  user-journeys-1-crawl-mock-large.mmd  user-journeys-2-repl-look-move-quests-score.dot  user-journeys-2-repl-look-move-quests-score.mmd  user-journeys-3-oit-dry-run-report.dot  user-journeys-3-oit-dry-run-report.mmd  user-journeys-4-self-update-check.dot  user-journeys-4-self-update-check.mmd  user-journeys-5-capabilities-autodiscover-registry.dot  user-journeys-5-capabilities-autodiscover-registry.mmd  user-journeys-6-dungeon-snapshot-diff-time-rift.dot  user-journeys-6-dungeon-snapshot-diff-time-rift.mmd
memory-store/: Cargo.toml  README.md
memory-store/src/: lib.rs
scripts/: atlas-kuzu-ingest.py  atlas-render.sh  capture-real-screenshots.mjs  capture-screenshots.sh
src/: az_runner.rs  lib.rs  main.rs  parser.rs  quests.rs  secrets.rs  world.rs
src/agent/: mod.rs  recipe.rs
src/agent_engine/: mod.rs
src/backend/: az.rs  mock.rs  mock_gen.rs  mod.rs
src/capabilities/: autodiscover.rs  derive.rs  mod.rs  registry.rs
src/dungeon/: cli.rs  commands.rs  concurrency.rs  decorations.rs  diff.rs  icon_assets.rs  icons.rs  links.rs  map.rs  mod.rs  playwright.rs  render.rs  server.rs  type_table.rs  validate.rs
src/memory/: mod.rs
src/oit/: guardrails.rs  mod.rs  report.rs  usecases.rs
src/update/: archive.rs  check.rs  checksum.rs  install.rs  mod.rs  network.rs  post_install.rs
tests/: backend_tests.rs  cli_args_tests.rs  crawl_screenshot_replacement_tests.rs  docs_carl_oit_campaign_tests.rs  docs_readme_tests.rs  dungeon_geography_oit_test.rs  dungeon_tests.rs  evolution_tests.rs  icon_assets_tests.rs  install_sh_e2e_test.sh  install_sh_test.sh  integration_tests.rs  memory_tests.rs  oit_binary_tests.rs  parser_tests.rs  quests_tests.rs  update_archive_tests.rs  update_checksum_tests.rs  update_pure_tests.rs  update_resolve_tests.rs  update_stamp_tests.rs  update_startup_tests.rs  world_tests.rs
