[package]
name = "azork"
version = "0.4.0"
edition = "2021"
description = "AzZork: the Azure control plane reimagined as a Zork-style text adventure."
license = "MIT"
repository = "https://github.com/rysweet/azork"
readme = "README.md"

[[bin]]
name = "azork"
path = "src/main.rs"

[features]
# The default build is fully offline and dependency-free: the graph memory uses
# the in-memory `GraphMemory` store with a hand-rolled on-disk format, so
# `cargo build`/`cargo test` stay light, offline, and green on a fresh clone.
#
# Durable persistence backed by the native `amplihack-memory` (SQLite/lbug) store
# is provided by the opt-in `memory-store/` companion crate, NOT by a dependency
# in this manifest. That crate is deliberately kept out of the azork package (like
# `agentic-bridge/`) because cargo resolves path/optional dependencies even when a
# feature is off — pulling `amplihack-memory` into this manifest would break the
# zero-dependency, offline fresh-clone build. See `memory-store/README.md`.
default = []

[dependencies]
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
ureq = "2"
