[package]
name = "azork-agentic-bridge"
version = "0.2.0"
edition = "2021"
description = "Optional companion crate: bridges AzZork into the recipe-runner-rs agentic Adapter."
license = "MIT"
publish = false

# This crate is DELIBERATELY separate from the azork package so that azork's own
# `cargo build`/`cargo test` stay zero-dependency, offline, and green on a fresh
# clone. Building the bridge is opt-in and requires the sibling reference repos to
# be checked out side-by-side (the canonical `~/src/{azork,amplihack-recipe-runner}`
# layout). azork has no `[workspace]`, so `cargo build` at the azork root never
# compiles this crate.

[dependencies]
azork = { path = ".." }
recipe-runner-rs = { path = "../../amplihack-recipe-runner" }
anyhow = "1"
